--- a/pom.xml
+++ b/pom.xml
@@ -680,5 +680,6 @@
         <module>vxquery-cli</module>
         <module>vxquery-xtest</module>
         <module>vxquery-benchmark</module>
+        <module>vxquery-rest</module>
     </modules>
 </project>
