Added hyracks-http dependency

--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,12 @@
 
             <dependency>
                 <groupId>org.apache.hyracks</groupId>
+                <artifactId>hyracks-http</artifactId>
+                <version>${hyracks.fullstack.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hyracks</groupId>
                 <artifactId>algebricks-compiler</artifactId>
                 <version>${hyracks.version}</version>
             </dependency>
@@ -671,6 +677,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <hyracks.version>0.2.17-incubating</hyracks.version>
+        <hyracks.fullstack.version>0.3.1</hyracks.fullstack.version>
         <apache-rat-plugin.version>0.11</apache-rat-plugin.version>
     </properties>
 
