Moved RestServer back to its own module

--- a/pom.xml
+++ b/pom.xml
@@ -688,5 +688,6 @@
         <module>vxquery-cli</module>
         <module>vxquery-xtest</module>
         <module>vxquery-benchmark</module>
+        <module>vxquery-rest</module>
     </modules>
 </project>
