--- a/vxquery-server/pom.xml
+++ b/vxquery-server/pom.xml
@@ -142,25 +142,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>algebricks-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>algebricks-core</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.apache.vxquery</groupId>
-            <artifactId>apache-vxquery-core</artifactId>
+            <artifactId>apache-vxquery-rest</artifactId>
             <version>0.7-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>hyracks-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>hyracks-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.hyracks</groupId>
@@ -168,27 +152,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.hyracks</groupId>
-            <artifactId>hyracks-control-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
             <artifactId>hyracks-control-nc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>hyracks-dataflow-std</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>hyracks-hdfs-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>hyracks-hdfs-2.x</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hyracks</groupId>
-            <artifactId>hyracks-http</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
