--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,12 @@
             </dependency>
 
             <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>4.1.6.Final</version>
+            </dependency>
+            
+            <dependency>
                 <groupId>org.apache.hyracks</groupId>
                 <artifactId>algebricks-compiler</artifactId>
                 <version>${hyracks.version}</version>
@@ -679,7 +685,6 @@
         <hyracks.fullstack.version>0.3.1</hyracks.fullstack.version>
         <hyracks.version>0.3.0</hyracks.version>
         <apache-rat-plugin.version>0.11</apache-rat-plugin.version>
-        <resteasy.version>3.1.3.Final</resteasy.version>
     </properties>
 
     <modules>
