--- a/vxquery-rest/pom.xml
+++ b/vxquery-rest/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.apache.hyracks</groupId>
             <artifactId>hyracks-http</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
